# gloss3d

./: CNAME  index.md  youtubePlayer.html
code/: GLwDrawA.c  GLwMDrawA.c  Makefile  Makefile.am  Makefile.am.bck  Makefile.in  Makefile.win32  Makefile.win64  TODO  aclocal.m4  backup.sh  build_win32.sh  config  config.status  configure  configure.ac  doxyfile  libtool  list.c  main.c  main.c.bck  prof  quad_indexes_level2.c
code/.deps/: list.Po  main.Po
code/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
code/g3d/: Makefile  Makefile.am  Makefile.in  g2dvector.c  g2dvector.lo  g3dbbox.c  g3dbbox.lo  g3dbone.c  g3dbone.lo  g3dcamera.c  g3dcamera.lo  g3dchannel.c  g3dcore.c  g3dcore.lo  g3dcube.c  g3dcube.lo  g3dcursor.c  g3dcursor.lo  g3dcutface.c  g3dcutface.lo  g3dcylinder.c  g3dcylinder.lo  g3dedge.c  g3dedge.lo  g3dextension.c  g3dface.c  g3dface.lo  g3dffd.c  g3dffd.lo  g3dheightmap.c  g3dimage.c  g3dimage.lo  g3dindexmap.c  g3dindexmap.c.unused  g3dkey.c  g3dkey.lo  g3dlight.c  g3dlight.lo  g3dlookup.c  g3dmaterial.c  (+67 more)
code/g3dcom/: Makefile  Makefile.am  Makefile.in  g3dcom.c  g3dcom.lo  libgloss-g3dcom.la
code/g3dengine/: Makefile.am  Makefile.in  g2dvector.c  g3dbbox.c  g3dbone.c  g3dcamera.c  g3dchannel.c  g3dcore.c  g3dcube.c  g3dcursor.c  g3dcurve.c  g3dcutface.c  g3dcylinder.c  g3dedge.c  g3dengine.c  g3dextension.c  g3dface.c  g3dfacegroup.c  g3dffd.c  g3dheightmap.c  g3dimage.c  g3dinstance.c  g3dkey.c  g3dlight.c  g3dlookup.c  g3dmaterial.c  g3dmesh.c  g3dmeshpose.c  g3dmodifier.c  g3dmorpher.c  g3dobject.c  g3dparticleemitter.c  g3dpick.c  g3dpivot.c  g3dplane.c  g3dprimitive.c  g3dprocedural.c  g3dproceduralbrick.c  g3dproceduralchessboard.c  g3dproceduralgradient.c  (+33 more)
code/g3dexport/: Makefile  Makefile.am  Makefile.in  g3dexport.c  g3dexport.lo  g3dexportextension.c  libgloss-g3dexport.la  obj.c  obj.lo  pov.c  stl.c
code/g3dimport/: 3ds.c  3ds.lo  Makefile  Makefile.am  Makefile.in  c4d.c.unused  collada.c  collada.lo  g3dimport.c  g3dimport.lo  g3dimportextension.c  libgloss-g3dimport.la  obj.c
code/g3dmouse/: Makefile  Makefile.am  Makefile.in  bridge.c  createBone.c  createBone.lo  createCube.c  createCube.lo  createCylinder.c  createCylinder.lo  createFace.c  createFace.lo  createFacegroup.c  createPlane.c  createPlane.lo  createSphere.c  createSphere.lo  createTorus.c  createTorus.lo  createTube.c  createVertex.c  createVertex.lo  cutMesh.c  cutMesh.lo  empty.lo  extrudeFace.c  extrudeFace.lo  g3dmousetool.c  g3dmousetool.lo  invertNormal.c  invertNormal.lo  libgloss-g3dmouse.la  move.c  move.lo  paintWeight.c  paintWeight.lo  pick.c  pick.lo  revertSpline.c  rotate.c  (+12 more)
code/g3dui/: ColorEdit.c  Makefile  Makefile.am  Makefile.am.bck  Makefile.in  MaterialBoard.c  MaterialEdit.c  MaterialList.c  TabbedBook.c  g3dui.c  g3duiboneedit.c  g3duiclipboard.c  g3duicoordinatesedit.c  g3duicubeedit.c  g3duicurrent.c  g3duicylinderedit.c  g3duiffdedit.c  g3duikeyedit.c  g3duilightsettings.c  g3duilist.c  g3duimaterialsettings.c  g3duimenubar.c  g3duimeshedit.c  g3duimodeboard.c  g3duimousetools.c  g3duiobjectboard.c  g3duiobjectedit.c  g3duiplaneedit.c  g3duiquad.c  g3duirendersettings.c  g3duirenderwindow.c  g3duisphereedit.c  g3duisymmetryedit.c  g3duitab.c  g3duitextureedit.c  g3duitimeline.c  g3duitoolbar.c  g3duitorusedit.c  g3duiuvmapedit.c  g3duiview.c  (+2 more)
code/g3durmanager/: Makefile  Makefile.am  Makefile.in  g3durmanager.c  g3durmanager.lo  libgloss-g3durmanager.la  urmAddMaterial.c  urmAddMeshPose.c  urmAddSplinePoint.c  urmAddSplineSegment.c  urmAddTag.c  urmAddTexture.c  urmAddUVMap.c  urmAddVertexPose.c  urmCreateFacegroup.c  urmCutSpline.c  urmDeleteSplinePoints.c  urmFillHeightmap.c  urmMorpherMoveVertices.c  urmObjectMoveKeys.c  urmObjectPose.c  urmObjectRemoveKeys.c  urmPaintImage.c  urmRemoveMaterial.c  urmRemoveTag.c  urmRemoveTexture.c  urmRemoveUVMap.c  urmRemoveVertexPose.c  urmRevertSpline.c  urmRoundSplinePoint.c  urmSculptFace.c  urmSelectMeshPose.c  urmSelectVertexPose.c  urmSplitMesh.c  urmaddobject.c  urmaddobject.lo  urmaddvertex.c  urmaddvertex.lo  urmaddweightgroup.c.unused  urmconvertprimitive.c  (+25 more)
code/include/: ColorEdit.h  GLwDrawA.h  GLwDrawAP.h  GLwMDrawA.h  GLwMDrawAP.h  MaterialEdit.h  MaterialList.h  SpinButton.h  TabbedBook.h  c4ddisclaimer.txt  c4dmelange.h  config.h  config.h.in  config.h.in~  g3d.h  g3dcom.h  g3dexport.h  g3dexportv2.h  g3dexportv3.h  g3dimport.h  g3dimportv2.h  g3dimportv3.h  g3dmouse.h  g3dui.h  g3dui_gtk3.h  g3dui_motif.h  g3durmanager.h  gtkglarea.h  list.h  r3d.h  r3d.h.bck  r3dnet.h  siggen.sh  signatures  signatures.h  signaturesv2.h  signaturesv3.h
code/lips3d/: Makefile.am  l3dbasepen.c  l3dbucket.c  l3dcore.c  l3dobject.c  l3dpattern.c  l3dselector.c  l3dspraytool.c  l3dsysinfo.c
code/list/: Makefile.am  list.c
code/makeup3d/: m3dbasepen.c  m3dbucket.c  m3dcore.c  m3dobject.c  m3dpattern.c  m3dselector.c  m3dsysinfo.c
code/qiss3d/: Makefile.am  q3darea.c  q3dbounding.c  q3dcamera.c  q3dfilter.c  q3dfilter.unix.c  q3dinstance.c  q3dinterpolation.c  q3djob.c  q3dlight.c  q3dmesh.c  q3dobject.c  q3doctree.c  q3dparticleemitter.c  q3dplane.c  q3dray.c  q3dscene.c  q3dsettings.c  q3dshadowmap.c  q3dsolid.c  q3dsphere.c  q3dsymmetry.c  q3dtriangle.c  q3dvector.c  q3dvertexset.c  q3dzengine.c
code/r3d/: Makefile  Makefile.am  Makefile.in  libgloss-r3d.la  r3d.c  r3d.lo  r3darea.c  r3darea.lo  r3dcamera.c  r3dcamera.lo  r3ddof.c  r3dface.c  r3dface.lo  r3dfilter.c  r3dfilter.lo  r3dfulloctree.c  r3dinterpolation.c  r3dinterpolation.lo  r3dlight.c  r3dlight.lo  r3dmesh.c  r3dmesh.lo  r3dmotionblur.c  r3dobject.c  r3dobject.lo  r3doctree.c  r3doctree.lo  r3dplane.c  r3dplane.lo  r3dray.c  r3dray.lo  r3drendersettings.c  r3dscene.c  r3dscene.lo  r3dvoxtree.c
code/r3dnet/: Makefile  Makefile.am  Makefile.in  r3dnetclient.c  r3dnetframe.c  r3dnetserver.c
code/xpm/: Makefile.am  addvertex.xcf  addvertex.xpm  axismode.xpm  axismode_test.xcf  axismode_test.xpm  bonico.xcf  bonico.xpm  bridge.xpm  brush_0.c  brush_0.xcf  brush_1.c  brush_2.c  brush_3.xcf  brush_4.xcf  (+134 more)
(+1241 files in other folders)
