ACLOCAL_AMFLAGS= -I m4

AM_CFLAGS = -I$(top_srcdir)/include -Wimplicit-function-declaration -Wformat

lib_LTLIBRARIES = libgloss-g3dexport.la
libgloss_g3dexport_la_SOURCES = $(LIBGLOSSG3DEXPORT_C_FILES)

LIBGLOSSG3DEXPORT_C_FILES = v2/g3dexportextension.c \
                            v2/g3dexportapp.c \
                            v2/g3dexportbone.c \
                            v2/g3dexport.c \
                            v2/g3dexportcamera.c \
                            v2/g3dexportchannel.c \
                            v2/g3dexportlight.c \
                            v2/g3dexportmaterial.c \
                            v2/g3dexportmesh.c \
                            v2/g3dexportmodifiers.c \
                            v2/g3dexportobject.c \
                            v2/g3dexportprimitive.c \
                            v2/g3dexportuvmap.c \
                            v2/g3dexportscene.c \
                            v2/g3dexportsymmetry.c \
                            v2/g3dexportsubdivider.c \
                            v2/g3dexportspline.c \
                            v2/g3dexportsplinerevolver.c \
                            v2/g3dexporttext.c \
                            v2/g3dexportwireframe.c \
                            v2/g3dexportffd.c \
                            v2/g3dexportkey.c \
                            v2/g3dexportmorpher.c \
                            stl.c \
                            pov.c \
                            obj.c
